# weather-checker

./: CMakeLists.txt  LICENSE  apirequestresponse.cpp  apirequestresponse.h  locations.cpp  locations.h  locationsdb.cpp  locationsdb.h  locationsmanager.cpp  locationsmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  weathermanager.cpp  weathermanager.h
